# sistema-hospital-py

./: pyproject.toml
core/: main.py
core/structured/: clinica.py  hospital.py  main.py
schemas/: initial_schema.sql
